force-app/main/default/objects/Estimate_and_Actuals__c/Estimate_and_Actuals__c.object-meta.xml
<CustomObject>
    <label>Estimate and Actuals</label>
    <nameField>
        <label>Estimate and Actuals Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Estimate and Actuals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>