force-app/main/default/objects/Estimate_and_Actuals__c/fields/Created_Date_H__c.field-meta.xml
<CustomField>
    <fullName>Created_Date_H__c</fullName>
    <label>Created Date (H)</label>
    <type>DateTime</type>
</CustomField>