force-app/main/default/objects/Estimate_and_Actuals__c/fields/Currency_H__c.field-meta.xml
<CustomField>
    <fullName>Currency_H__c</fullName>
    <label>Currency (H)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>