force-app/main/default/objects/Estimate_and_Actuals__c/fields/Modified_By_ID_H__c.field-meta.xml
<CustomField>
    <fullName>Modified_By_ID_H__c</fullName>
    <label>Modified By ID (H)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>