force-app/main/default/objects/Estimate_and_Actuals__c/fields/Modified_Date_H__c.field-meta.xml
<CustomField>
    <fullName>Modified_Date_H__c</fullName>
    <label>Modified Date (H)</label>
    <type>DateTime</type>
</CustomField>