force-app/main/default/objects/Estimate_and_Actuals__c/fields/OLI_ID__c.field-meta.xml
<CustomField>
    <fullName>OLI_ID__c</fullName>
    <label>OLI ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>