force-app/main/default/objects/Estimate_and_Actuals__c/fields/Schedule_Amount_H__c.field-meta.xml
<CustomField>
    <fullName>Schedule_Amount_H__c</fullName>
    <label>Schedule Amount (H)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>