force-app/main/default/objects/Estimate_and_Actuals__c/fields/Schedule_Date_H__c.field-meta.xml
<CustomField>
    <fullName>Schedule_Date_H__c</fullName>
    <label>Schedule Date (H)</label>
    <type>Date</type>
</CustomField>