force-app/main/default/objects/Estimate_and_Actuals__c/fields/Schedule_Modified_By_H__c.field-meta.xml
<CustomField>
    <fullName>Schedule_Modified_By_H__c</fullName>
    <label>Schedule Modified By (H)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>