force-app/main/default/objects/Estimate_and_Actuals__c/fields/ScheduleID18_H__c.field-meta.xml
<CustomField>
    <fullName>ScheduleID18_H__c</fullName>
    <label>ScheduleID18(H)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>